objects/Commission__c.object
<CustomObject>
    <description>Commission calculation for US Commercial Sales Team</description>
    <fields>
        <fullName>Calculated_Month__c</fullName>
        <label>Calculated Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payable_Month__c</fullName>
        <label>Payable Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>Fedruary</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <label>Salesperson</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stanley Welle</fullName>
                </value>
                <value>
                    <fullName>Steven Collora</fullName>
                </value>
                <value>
                    <fullName>Kris Weinberg</fullName>
                </value>
                <value>
                    <fullName>David Salo</fullName>
                </value>
                <value>
                    <fullName>Isabelle Eyman</fullName>
                </value>
                <value>
                    <fullName>Justin Elders</fullName>
                </value>
                <value>
                    <fullName>Alicia Madison</fullName>
                </value>
                <value>
                    <fullName>Eric Trierweiler</fullName>
                </value>
                <value>
                    <fullName>Danielle Usilton</fullName>
                </value>
                <value>
                    <fullName>Kim Forte</fullName>
                </value>
                <value>
                    <fullName>Phil Renda</fullName>
                </value>
                <value>
                    <fullName>Sean Dattoli</fullName>
                </value>
                <value>
                    <fullName>Christine Roche</fullName>
                </value>
                <value>
                    <fullName>Dawn Korinek</fullName>
                </value>
                <value>
                    <fullName>Beth Zubal</fullName>
                </value>
                <value>
                    <fullName>Sara Lapomarda</fullName>
                </value>
                <value>
                    <fullName>Katie Sapp</fullName>
                </value>
                <value>
                    <fullName>Marlon Hopgood</fullName>
                </value>
                <value>
                    <fullName>Shelley Marino</fullName>
                </value>
                <value>
                    <fullName>Shannon Dean</fullName>
                </value>
                <value>
                    <fullName>Brian Long</fullName>
                </value>
                <value>
                    <fullName>Marcus Outzen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Commercial Commission</label>
    <nameField>
        <label>Commission Payment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>